// Copyright 2022 ETH Zurich
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/scionproto/scion/go/pkg/proto/coligate";

package proto.coligate.v1;

service ColibriGateway {
    rpc UpdateSigmas(UpdateSigmasRequest) returns (UpdateSigmasResponse) {}
}

message UpdateSigmasRequest {
    uint64 asid = 1;
    bytes suffix = 2;
    uint32 bwcls = 3;
    uint32 rlc = 4;
    int64 validityTimestamp = 5;
    repeated HopInterfaces hopInterfaces = 6;
    repeated bytes macs = 7;
    // TODO(justin)
}

message HopInterfaces {
    uint32 ingressid = 1;
    uint32 egressid = 2;
}

message UpdateSigmasResponse {
    // TODO(justin)
}
